selfhost/test/typechecker/bindingdecl/error_type_mismatch_option.out
Error at %FILE_NAME%:1:27
Type mismatch for parameter 'value'
  |  val a: Int? = Option.Some("abc")
                               ^
Expected: Int
but instead found: String
