selfhost/test/typechecker/bindingdecl/error_type_mismatch_option.abra
val a: Int? = Option.Some("abc")